# BitBrutal

./: .gitignore  Cargo.toml  README.md  deploy.sh  output.txt  test_hash.txt
src/: main.rs
src/cli/: banner  cli.rs  cli_copy.rs  messages.rs  mod.rs  progress_bar.rs
src/core/: combinations.rs  components.rs  controller.rs  dict_generator.rs  dictionary.rs  mod.rs  rearrange.rs  substrings.rs
src/core/hash/: aes.rs  mod.rs  ring.rs
